api: Refactor /endpoint API for 1.0
https://github.com/cilium/cilium/issues/3280
We want the API to be more declarative and to reflect the
difference between the desired configuration and the one in effect.
