# api/v1/models/policy_revision.go
@@ -1,20 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-)
-
-// PolicyRevision The revision number of the policy repository in the cilium agent
-// swagger:model PolicyRevision
-
-type PolicyRevision int64
-
-// Validate validates this policy revision
-func (m PolicyRevision) Validate(formats strfmt.Registry) error {
-	return nil
-}
